# axum-htmx-sandbox

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  tailwind.config.js
src/: config.rs  lib.rs  main.rs
src/http/: forms.rs  healthcheck.rs  index.rs  mod.rs
src/http/reports/: mod.rs
src/templates/: base.html
templates/: base.html  base_nav.html  healthcheck.html  index.html  report_list.html
