[package]
name = "axum-htmx-sandbox"
version = "0.1.0"
edition = "2021"

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size
strip = true # Remove debug symbols

[dependencies]
anyhow = "1.0.91"
axum = "0.7.7"
axum-embed = "0.1.0"
axum-macros = "0.4.2"
clap = { version = "4.5.21", features = ["derive", "env"] }
libsql = "0.6.0"
minijinja = { version = "2.5.0", features = ["builtins", "json", "loader"] }
minijinja-embed = "2.3.1"
rust-embed = "8.5.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
thiserror = "2.0.3"
tokio = { version = "1.41.0", features = ["full"] }
tower = "0.5.1"
tower-http = { version = "0.6.1", features = ["compression-br", "compression-gzip", "fs", "set-header"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[build-dependencies]
minijinja-embed = "2.3.1"

